--- a/src/pages/care-plan/su-care-review/su-care-review.html
+++ b/src/pages/care-plan/su-care-review/su-care-review.html
@@ -67,8 +67,8 @@
           </guuey-date-input>
 
           <div class="modal-button-container">
-            <paper-button on-tap="cancelNewReview">cancel</paper-button>
-            <paper-button on-tap="saveNewReview">continue to new review</paper-button>
+            <paper-button class="cancel-button" on-tap="cancelNewReview">cancel</paper-button>
+            <paper-button class="confirm-button" on-tap="saveNewReview">continue to new review</paper-button>
           </div>
 
         </paper-dialog>
