--- a/src/pages/care-plan/su-care/su-care.html
+++ b/src/pages/care-plan/su-care/su-care.html
@@ -115,8 +115,8 @@
         value="{{customData.label2}}">
       </paper-textarea>
       <div class="modal-button-container">
-        <paper-button on-tap="cancelNewSection">cancel</paper-button>
-        <paper-button on-tap="saveNewSection">save</paper-button>
+        <paper-button class="cancel-button" on-tap="cancelNewSection">cancel</paper-button>
+        <paper-button class="confirm-button" on-tap="saveNewSection">save</paper-button>
       </div>
     </paper-dialog>
 
