--- a/src/elements/guuey-new-goal-modal/guuey-new-goal-modal.html
+++ b/src/elements/guuey-new-goal-modal/guuey-new-goal-modal.html
@@ -3,11 +3,12 @@
 <dom-module id="guuey-new-goal-modal">
 
   <style include="paper-dialog-shared-styles">
-
+  :host{
+    width:600px;
+  }
   .padded{
     padding:20px;
   }
-
   .addGoalHeader h2{
     margin-top:0;
     padding:15px;
@@ -19,6 +20,25 @@
   }
   .stepsFab:hover{
     cursor:default;
+  }
+  table{
+    width:100%;
+  }
+  th{
+    text-align:left;
+  }
+  .button-container{
+    text-align:right;
+  }
+  .cancel-button{
+    display:inline-block;
+    text-align:center;
+  }
+  .confirm-button{
+    display:inline-block;
+    color:#FFFFFF;
+    background-color:#009688;
+    text-align:center;
   }
   </style>
 
@@ -123,9 +143,7 @@
               observe="order">
               <tr>
                 <td>
-                  <center>
-                    <paper-fab class="stepsFab" label="[[step.order]]"></paper-fab>
-                  </center>
+                  <paper-fab class="stepsFab" label="[[step.order]]"></paper-fab>
                 </td>
                 <td>
                   [[step.description]]
@@ -140,9 +158,7 @@
             </template>
             <tr>
               <td>
-                <center>
-                  <paper-fab icon="icons:add" on-tap="addNewStep"></paper-fab>
-                </center>
+                <paper-fab icon="icons:add" on-tap="addNewStep"></paper-fab>
               </td>
               <td>
                 Add a new step.
@@ -158,9 +174,11 @@
         </table>
 
       </div>
+      <div class="button-container">
+        <paper-button class="cancel-button" on-tap="cancelNewGoal">cancel</paper-button>
+        <paper-button class="confirm-button" on-tap="saveNewGoal">save</paper-button>
+      </div>
 
-      <paper-button on-tap="cancelNewGoal">cancel</paper-button>
-      <paper-button on-tap="saveNewGoal">save</paper-button>
     </div>
 
   </template>
