--- a/src/pages/care-plan/su-medication/dependencies.html
+++ b/src/pages/care-plan/su-medication/dependencies.html
@@ -14,6 +14,7 @@
 <link rel="import" href="../../../../bower_components/paper-time-picker/paper-time-picker.html" />
 <link rel="import" href="../../../../bower_components/paper-time-picker/paper-time-picker-dialog-style.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/editor-icons.html" />
+<link rel="import" href="../../../../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/communication-icons.html" />
 
