updated notifications to new styles, updated ad settings to include controls for privacy name settings, used and styled privacy name settings on def-home, updated needed styles

--- a/src/elements/guuey-truncate/guuey-truncate.html
+++ b/src/elements/guuey-truncate/guuey-truncate.html
@@ -17,10 +17,13 @@
       filter:var(--container-blur, blur(5px));
     }
     #moreButton{
+      color:#118675;
       height:50px;
       display:none;
       display:var(--more-button-display, none);
       margin:0;
+      padding-left:0;
+      text-align:left;
     }
     </style>
     <div id="container">
