--- a/src/pages/admin/ad-settings/dependencies.html
+++ b/src/pages/admin/ad-settings/dependencies.html
@@ -2,6 +2,8 @@
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/paper-slider/paper-slider.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-document.html" />
+<link rel="import" href="../../../../bower_components/paper-toggle-button/paper-toggle-button.html" />
+
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
 <link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
