--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -415,6 +415,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     #notifyDialogScroll{
       --paper-dialog-scrollable:{
         max-height:calc(300px);
+        padding:0;
+        margin:0;
       };
     }
 
