--- a/src/elements/guuey-notification/guuey-notification.html
+++ b/src/elements/guuey-notification/guuey-notification.html
@@ -9,7 +9,7 @@
         display:block;
         box-sizing: border-box;
         border-bottom:1px solid grey;
-        padding:20px 0 20px 0;
+        padding:20px;
       }
       .flexNotify{
         display:flex;
